--- a/frontend/components/pager/_pager.html.slim
+++ b/frontend/components/pager/_pager.html.slim
@@ -1,4 +1,3 @@
-=> page_entries_info @objects
+= page_entries_info @objects
 br /
-= paginate @objects, theme: 'twitter-bootstrap-4',
-                      pagination_class: 'pagination-sm'
+= paginate @objects, theme: 'twitter-bootstrap-4', pagination_class: 'pagination-sm'
