--- a/frontend/components/admin/form_operations/_admin_form_operations.html.slim
+++ b/frontend/components/admin/form_operations/_admin_form_operations.html.slim
@@ -1,7 +1,5 @@
 .form-actions.row.bg-light
-  .col-lg-8.offset-lg-4
-    .form-group.row.mb-0
-      .col-sm-10.offset-sm-2
-        => @form.submit class: 'btn btn-primary ml-sm-1', name: 'commit'
-        | &nbsp;
-        a.btn.btn-link href=(admin_models_path) = t('cancel')
+  .col-4.offset-2
+    a.btn.btn-link href=(admin_models_path) = t('cancel')
+  .col-6
+    = @form.submit class: 'btn btn-warning ml-sm-1', name: 'commit'
