--- a/frontend/components/admin/ransack_buttons/_admin_ransack_buttons.html.slim
+++ b/frontend/components/admin/ransack_buttons/_admin_ransack_buttons.html.slim
@@ -1,3 +1,3 @@
 .btn-group.btn-group-sm
-  = @form.submit 'Go', class: 'btn btn-primary'
-  = link_to 'Clr', nil, class: 'btn btn-default'
+  = @form.submit t('go'), class: 'btn btn-primary'
+  = link_to t('clear'), nil, class: 'btn btn-default'
