--- a/frontend/components/admin/header/_admin_header.html.slim
+++ b/frontend/components/admin/header/_admin_header.html.slim
@@ -1,3 +1,3 @@
 .page-header(data-controller="admin-header")
-  = link_to t('New ') + model_name.human, admin_new_path, class: 'btn btn-secondary float-right'
+  = link_to t('new') + model_name.human, admin_new_path, class: 'btn btn-secondary btn-warning float-right'
   h2 = link_to model_name.human, admin_models_path
