--- a/app/views/admin/_show.html.slim
+++ b/app/views/admin/_show.html.slim
@@ -1,12 +1,18 @@
+/ locals: object
+
 .form-actions.row.bg-light
   .col-lg-8.offset-lg-4
     .form-group.row.mb-0
       .col-sm-10.offset-sm-2
-        => link_to 'Edit', admin_edit_path(@object.id), class: 'btn btn-warning ml-sm-1'
+        => link_to 'Edit', admin_edit_path(object.id), class: 'btn btn-warning ml-sm-1'
         a.btn.btn-link onClick='history.back(); return true;' Back
 
+- if object[:lines].present? && object.lines.count.positive?
+  - object.lines.map do |line|
+    table
+
 dl.dl-horizontal
-  - klass = @object.class
-  - @object.attributes.each do |key, value|
+  - klass = object.class
+  - object.attributes.each do |key, value|
     dt.text-info = klass.human_attribute_name key
     dd = sanitize (value || 'NIL').to_s
