Specify admin's pagination theme

--- a/app/views/admin/_pager.html.slim
+++ b/app/views/admin/_pager.html.slim
@@ -3,4 +3,4 @@
 - cache ['admin_pager', objects]
   = page_entries_info objects
   br /
-  = paginate objects, theme: 'twitter-bootstrap-4', pagination_class: 'pagination-sm'
+  = paginate objects, theme: 'admin'
