Allow to add content on form header

--- a/app/views/admin/_header.html.slim
+++ b/app/views/admin/_header.html.slim
@@ -1,9 +1,11 @@
-/ locals: klass, disable_new
+/ locals: klass
 
-- cache "admin_header_#{klass.name}"
-  - model_name = klass.model_name
-  - unless (defined?(disable_new) && disable_new)
-    - admin_new_path = send "new_admin_#{model_name.name.underscore}_path"
-    .page-header(data-controller="admin-header")
-      = link_to t('new') + model_name.human, admin_new_path, class: 'btn btn-secondary btn-warning float-right'
-      h2 = link_to model_name.human, admin_new_path
+- model_name = klass.model_name
+- path_name = "new_admin_#{model_name.name.underscore}_path".to_sym
+- admin_new_path = respond_to?(path_name) ? send(path_name) : nil
+.page-header.d-flex
+  .mr-auto
+    h2 = link_to model_name.human, admin_new_path
+  = yield
+  | &nbsp;
+  span = link_to t('new') + model_name.human, admin_new_path, class: 'btn btn-secondary btn-warning float-right' if admin_new_path.present?
